# leo-codeql

./: .gitignore  README.md  codeql-extractor.yml  semmlecode.leo.dbscheme
.github/workflows/: ci.yml
dbscheme/: leo.dbscheme
docs/: ql-library-architecture.md
extractor/: Cargo.toml  deny.toml  pyproject.toml
extractor/leo_extractor/: __init__.py  ast_nodes.py  ast_to_trap.py  expression_parser.py  lexer.py  main.py  parser.py  trap_writer.py
extractor/src/: ast_to_trap.rs  convert_declarations.rs  convert_expressions.rs  convert_expressions_basic.rs  convert_expressions_complex.rs  convert_statements.rs  convert_types.rs  kind_constants.rs  lib.rs  main.rs  op_codes.rs  trap_writer.rs
extractor/tests/: __init__.py  example.leo  integration_tests.rs  op_code_tests.rs  test_fixes.py  test_parser.py  test_trap_generation.py
ql/lib/: leo.dbscheme  leo.dbscheme.stats  leo.qll  qlpack.yml
ql/lib/codeql/leo/: Leo.qll
ql/lib/codeql/leo/ast/: AstNode.qll  Declaration.qll  Expression.qll  (+5 more)
ql/src/: qlpack.yml
ql/src/security/: FieldTypeForBalance.qhelp  FieldTypeForBalance.ql  MissingInitAccessControl.qhelp  MissingInitAccessControl.ql  PrivacyLeakToFinalize.qhelp  PrivacyLeakToFinalize.ql  TernaryPanicTrap.qhelp  TernaryPanicTrap.ql
ql/test/: qlpack.yml  test-library.ql
scripts/: create-extractor-pack.sh  run-extraction-test.sh
test-programs/: README.md  basic-token.leo  edge-cases.leo  field-balance.leo  hello.leo  if-else-panic.leo  missing-init-guard.leo  privacy-leak.leo  safe-contract.leo  ternary-underflow.leo
tools/: autobuild.sh  index-files.sh
(+2 files in other folders)
